# AI Prompt 管理器 - 项目架构图

## 1. 整体多端架构

```mermaid
graph TB
    subgraph Clients[客户端层]
        Web[apps_web]
        Desktop[apps_desktop]
        Mobile[apps_mobile]
        Flutter[apps_flutter]
        Extension[apps_extension]
        Mini[apps_miniprogram]
    end

    subgraph Shared[共享层]
        Pkg[packages_shared]
    end

    subgraph Backend[后端层]
        Auth[Supabase_Auth]
        DB[(PostgreSQL)]
        Fn[Edge_Function]
    end

    Desktop --> Web
    Mobile --> Web
    Web --> Auth
    Web --> DB
    Web --> Fn
    Flutter --> Auth
    Flutter --> DB
    Flutter --> Fn
    Extension --> Auth
    Extension --> DB
    Extension --> Fn
    Mini --> Auth
    Mini --> DB
    Mini --> Fn
    Web -.-> Pkg
```

---

## 2. Web 应用架构

```mermaid
graph TB
    subgraph WebApp[apps_web]
        App[App.tsx]
        Router[React_Router]
        subgraph Pages[页面]
            Login[LoginPage]
            Dashboard[DashboardPage]
            PromptList[PromptListPage]
            PromptDetail[PromptDetailPage]
            Settings[SettingsPage]
        end
        subgraph Contexts[状态管理]
            AuthCtx[AuthContext]
            PromptCtx[PromptContext]
        end
        Supabase[lib_supabase.ts]
    end

    App --> Router --> Pages
    Pages --> Contexts --> Supabase
```

---

## 3. 浏览器扩展架构

```mermaid
flowchart TB
    subgraph Build[构建]
        Vite[vite.config.ts]
        Dist[dist]
    end

    subgraph Chrome[Chrome_扩展_MV3]
        Manifest[manifest.json]
        SW[background.js]
        CS[content.js]
        Side[sidepanel.html]
        Popup[popup.html]
        Opt[options.html]
    end

    subgraph UI[界面层]
        App[App.tsx]
        Hook[usePromptData.ts]
    end

    subgraph Local[本地持久化]
        Storage[storage.ts]
        Mock[mockData.ts]
    end

    subgraph Remote[远端]
        SB[supabase.ts]
        RT[runtime.ts]
    end

    subgraph BG[后台能力]
        Sync[syncService.ts]
        Menu[contextMenus.ts]
        Insert[tabInsert.ts]
        Clip[promptClipService.ts]
        Msg[messaging.ts]
    end

    Vite --> Dist --> Manifest
    Manifest --> SW
    Manifest --> CS
    Manifest --> Side
    Side --> App --> Hook
    Hook --> Storage
    Hook --> Mock
    Hook --> SB
    App --> SB
    SB --> RT
    SW --> Sync
    SW --> Menu
    SW --> Insert
    SW --> Clip
    SW --> Msg
    CS --> Msg
    Insert --> CS
```

---

## 4. 微信小程序架构

```mermaid
graph TB
    subgraph MP[apps_miniprogram]
        AppJson[app.json]
        AppTs[app.ts]

        subgraph PagesMP[页面]
            PLogin[pages_login]
            PIndex[pages_index]
            PList[pages_prompts_list]
            PDetail[pages_prompts_detail]
            PCat[pages_categories_index]
        end

        subgraph Utils[工具层]
            SB[utils_supabase.ts]
            Sto[utils_storage.ts]
            Help[utils_helpers.ts]
            Types[utils_types.ts]
        end

        Config[config_config.ts]
    end

    AppJson --> PagesMP
    AppTs --> SB
    PagesMP --> SB
    PagesMP --> Sto
    PagesMP --> Help
    PagesMP --> Types
    SB --> Config
    SB --> Sto
```

---

## 5. Flutter 应用架构

```mermaid
graph TB
    subgraph FlutterApp[apps_flutter]
        Main[main.dart]
        AppDart[app.dart]
        Router[GoRouter]

        subgraph Screens[screens]
            FLogin[login_screen]
            FDashboard[dashboard_screen]
            FList[prompt_list_screen]
            FDetail[prompt_detail_screen]
            FCategories[categories_screen]
        end

        subgraph Providers[providers]
            FAuth[AuthProvider]
            FPrompt[PromptProvider]
        end

        subgraph Services[services]
            FRepo[PromptRepository]
            FAI[AiService]
            FCopy[CopyHistoryService]
        end

        subgraph Models[models]
            FPromptModel[prompt.dart]
            FCatModel[category.dart]
            FVarModel[variable.dart]
        end

        Config[config_app_config.dart]
        Local[SharedPreferences]
    end

    Main --> AppDart --> Router --> Screens
    Screens --> Providers --> Services
    Services --> Models
    FRepo --> Supabase[(Supabase)]
    FAI --> EdgeFn[optimize-prompt]
    FCopy --> Local
    Main --> Config
```

---

## 6. 数据库模型

```mermaid
erDiagram
    profiles {
        uuid id PK
        timestamp created_at
    }

    categories {
        uuid id PK
        uuid user_id FK
        text name
        uuid parent_id FK
        integer sort_order
        timestamp created_at
    }

    prompts {
        uuid id PK
        uuid user_id FK
        text title
        text content
        uuid category_id FK
        text[] tags
        jsonb variables
        integer usage_count
        timestamp created_at
        timestamp updated_at
    }

    profiles ||--o{ categories : 拥有
    profiles ||--o{ prompts : 创建
    categories ||--o{ categories : 自关联
    categories ||--o{ prompts : 包含
```

---

## 7. 跨端数据流

```mermaid
flowchart LR
    subgraph Web端[Web_Desktop_Mobile]
        WUI[React_Pages]
        WCtx[Context_状态]
        WAPI[supabase-js]
    end

    subgraph Flutter端[Flutter]
        FUI[screens]
        FProv[Provider_状态]
        FLocal[SharedPreferences]
        FAPI[supabase_flutter]
    end

    subgraph 扩展端[Extension]
        EUI[App.tsx]
        EHook[usePromptData]
        ELocal[chrome_storage]
        EAPI[supabase-js]
    end

    subgraph 小程序[Miniprogram]
        MUI[Page_页面]
        MLocal[wx_storage]
        MAPI[wx_request]
    end

    subgraph Cloud[Supabase]
        Auth[Auth]
        DB[PostgreSQL]
        Fn[optimize-prompt]
    end

    WUI --> WCtx --> WAPI
    FUI --> FProv --> FAPI
    FUI --> FLocal
    EUI --> EHook
    EHook --> ELocal
    EHook --> EAPI
    MUI --> MLocal
    MUI --> MAPI

    WAPI --> Auth
    WAPI --> DB
    WAPI --> Fn
    FAPI --> Auth
    FAPI --> DB
    FAPI --> Fn
    EAPI --> Auth
    EAPI --> DB
    EAPI --> Fn
    MAPI --> Auth
    MAPI --> DB
    MAPI --> Fn
```

---

## 8. 扩展消息流（页面插入 Prompt）

```mermaid
sequenceDiagram
    participant Side as 侧栏_App.tsx
    participant BG as background.js
    participant CS as content.js
    participant Page as 网页输入框

    Side->>BG: APM_INSERT_PROMPT
    BG->>CS: executeScript_sendMessage
    CS->>Page: 查找_textarea
    CS->>Page: 写入_Prompt_内容
    CS->>Page: 触发_input_事件
    CS-->>BG: 插入结果
    BG-->>Side: 响应_Toast
```

---

## 9. 技术栈总览

```mermaid
mindmap
    root(AI_Prompt_管理器)
        Web端
            React_18
            TypeScript_5
            Vite_5
            Tailwind_CSS
            React_Router
            React_Context
        桌面端
            Tauri_2
            Rust_WebView
        移动端_Capacitor
            Capacitor_7
            Android
            封装_Web
        移动端_Flutter
            Flutter_3
            Dart_3
            Provider
            go_router
            supabase_flutter
            SharedPreferences
            Material_3
        浏览器扩展
            Chrome_MV3
            React_Vite
            chrome_storage
            Service_Worker
            Content_Script
        微信小程序
            原生框架
            TypeScript
            wx_request
        云端
            Supabase_Auth
            PostgreSQL
            Edge_Functions
        包管理
            pnpm_9
            Monorepo
```
